# HappyDayReminder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.yml  config.yaml  config.yml  docker.yaml  email_template.hbs
.github/actions/setup-version/: action.yml
.github/workflows/: action.yml  lease.yml  run.yml
html/: README.md  nodemon.json  server.js  tailwind.config.js
html/css/: output.css
html/preview/: README.md  nodemon.json  package-lock.json  package.json  server.js  tailwind.config.js
html/preview/css/: output.css
html/templates/: birthday_template.hbs
src/: checker.rs  config.rs  email_handler.rs  mailer.rs  main.rs  smtp.rs  stmp.rs  template.rs
templates/: README.md  birthday_template.hbs  package-lock.json  package.json  server.js
templates/css/: output.css
